# embroidery_software

./: CMakeLists.txt
